Added AB testing to prototype

--- a/src/prototype/app/views/landing-page-apps.html
+++ b/src/prototype/app/views/landing-page-apps.html
@@ -28,12 +28,12 @@
       {{ contentsList({
         items: [
           {
-            href: "/landing-page-prototype",
+            href: "/landing-page-prototype-a",
             text: "Prototype A (control)"
           },
           {
-            href: "/landing-page-prototype",
-            text: "Prototype B (variant)"
+            href: "/landing-page-prototype-b",
+            text: "Prototype B"
           },
           {
             href: "/frontend/index.html",
