--- a/src/prototype/app/views/version-a/check-your-status-type1.html
+++ b/src/prototype/app/views/version-a/check-your-status-type1.html
@@ -63,7 +63,7 @@
         </dl>
 
 
-      <a class="nhsuk-button" href="/type1-question" class="button">Change</a>
+      <a class="nhsuk-button" href="/version-a/type1-question" class="button">Change</a>
 
       <details class="nhsuk-details">
         <summary class="nhsuk-details__summary">
