--- a/src/prototype/app/views/version-a/type-1-content/overview.html
+++ b/src/prototype/app/views/version-a/type-1-content/overview.html
@@ -136,8 +136,6 @@
   <div class="nhsuk-width-container">
     <ol class="nhsuk-breadcrumb__list">
       <li class="nhsuk-breadcrumb__item"><a href="https://www.nhs.uk/" class="nhsuk-breadcrumb__link">Home</a></li>
-      <li class="nhsuk-breadcrumb__item"><a href="overview" class="nhsuk-breadcrumb__link">Choose if your GP medical records is shared for research and planning</a></li>
-      <li class="nhsuk-breadcrumb__item"><a href="make-your-choice" class="nhsuk-breadcrumb__link">Make your choice</a></li>
     </ol>
     <p class="nhsuk-breadcrumb__back">
       <a href="" class="nhsuk-breadcrumb__backlink">Back to Health A to Z</a>
@@ -154,84 +152,116 @@
   <div class="nhsuk-grid-column-two-thirds">
 
     <div class="nhsuk-u-reading-width">
-      <h1>Other ways to make a choice about sharing your GP data</h1>
+      <h1>Choose if your GP medical records is shared for research and planning</h1>
       <p class="nhsuk-lede-text">
-        Find other ways to choose if your personally identifiable patient data can be shared outside your GP practice for purposes except your own care to support health and care planning and research.
+        Choose if your personally identifiable patient data can be shared outside your GP practice for purposes except your own care to support health and care planning and research.
       </p>
     </div>
 
+    <nav class="nhsuk-contents-list" role="navigation" aria-label="Pages in this guide">
+      <h2 class="nhsuk-u-visually-hidden">Contents</h2>
+      <ol class="nhsuk-contents-list__list">
+        <li class="nhsuk-contents-list__item" aria-current="page">
+          <span class="nhsuk-contents-list__current">Overview</span>
+        </li>
+        <li class="nhsuk-contents-list__item">
+          <a class="nhsuk-contents-list__link" href="/version-a/type-1-content/how-confidential-patient">How confidential patient information is used</a>
+        </li>
+        <li class="nhsuk-contents-list__item">
+          <a class="nhsuk-contents-list__link" href="/version-a/type-1-content/when-your-choice-does-not-apply">When your choice does not apply</a>
+        </li>
+        <li class="nhsuk-contents-list__item">
+          <a class="nhsuk-contents-list__link" href="/version-a/type-1-content/make-your-choice">Make your choice</a>
+        </li>
+      </ol>
+    </nav>
+
     <p>
-      You can make or change a choice for:
+      Your health records contain a type of data called confidential patient information. This data can be used to help with research and planning.
     </p>
-    <ul class="nhsuk-list nhsuk-list--bullet">
-      <li>yourself</li>
-      <li>children under the age of 13</li>
-      <li>someone you can legally make decisions for</li>
-    </ul>
-      <p>
-        Download and complete this form and email or post it to your GP practice. 
-      </p>
-      <div class="nhsuk-grid-row">
-        <div class="nhsuk-grid-column-one-quarter nhsuk-u-one-querter-tablet">
-          <a class="app-download__link" href="https://assets.nhs.uk/nhsuk-cms/documents/Type1Opt-outform.docx">
-            <img class="app-download__thumbnail" height="150" alt="" src="https://assets.nhs.uk/nhsuk-cms/images/nhs-1.height-300.png">
-          </a>
-        </div>
-        <div class="nhsuk-grid-column-three-quesrters nhsuk-u-two-thirds-tablet">
-          <ul class="nhsuk-list">
-            <li><a href="https://assets.nhs.uk/nhsuk-cms/documents/Type1Opt-outform.docx">Type 1 Opt-out form.docx (32kB)</a></li>
-            <li>Published: 19 May 2021</li>
-            <li>Last updated: 19 May 2021</li>
-          </ul>
-        </div>
-      </div>
+    <p>
+      You can choose to stop your confidential patient information being used for research and planning. You can also make a choice for someone else like your children under the age of 13.
+    </p>
+    <p>
+      Your choice will only apply to the health and care system in England. This does not apply to health or care services accessed in Scotland, Wales or Northern Ireland.
+    </p>
+    <p>
+      This information is also available in <a href="" title="Other languages and formats"></a>other languages and formats.
+    </p>
 
+    <div class="nhsuk-inset-text">
+      <span class="nhsuk-u-visually-hidden">Coronavirus update: </span>
+      <h2>
+        Coronavirus update
+      </h2>
       <p>
-        If you are filling in this form on behalf of a dependent e.g. a child, the GP practice will first check that you have the authority to do so.
+        To help the NHS respond to coronavirus, your information may be used for coronavirus research purposes even if you have chosen not to share it. Any information used will be shared appropriately and lawfully.
       </p>
+    </div>
 
+      <h2>
+        What is confidential patient information
+      </h2>
       <p>
-        <a href="#">NHS Digital's privacy notice</a> explains how your data is used to apply your choice.
+        Confidential patient information is when 2 types of information from your health records are joined together.
       </p>
+      <p>
+        The 2 types of information are:
+      </p>
+      <ul class="nhsuk-list nhsuk-list--bullet">
+        <li>something that can identify you</li>
+        <li>something about your health care or treatment</li>
+      </ul>
+      <p>
+        For example, your name joined with what medicine you take.
+      </p>
+      <p>
+        Identifiable information on its own is used by health and care services to contact patients and this is not confidential patient information.
+      </p>
+      <h2>
+        How we use your confidential patient information
+      </h2>
+      <h3>
+        Your individual care
+      </h3>
+      <p>
+        Health and care staff may use your confidential patient information to help with your treatment and care. For example, when you visit your GP they may look at your records for important information about your health.
+      </p>
+      <h3>
+        Research and planning
+      </h3>
+      <p>
+        Confidential patient information might also be used to:
+      </p>
+      <ul class="nhsuk-list nhsuk-list--bullet">
+        <li>plan and improve health and care services</li>
+        <li>research and develop cures for serious illnesses</li>
+      </ul>
 
-      <div class="nhsuk-do-dont-list">
-        <h3 class="nhsuk-do-dont-list__label">Make or change a choice for an adult</h3>
-        <p>
-          To make and manage a choice on behalf of someone else, you must be one of the following to the person:
-        </p>
-        <ul class="nhsuk-list nhsuk-list--tick">
-          <li>
-            <svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" width="34" height="34">
-              <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12" stroke="#007f3b"></path>
-            </svg>
-            health and welfare lasting power of attorney
-          </li>
-          <li>
-            <svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" width="34" height="34">
-              <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12" stroke="#007f3b"></path>
-            </svg>
-            property and financial affairs lasting power of attorney
-          </li>
-          <li>
-            <svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" width="34" height="34">
-              <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12" stroke="#007f3b"></path>
-            </svg>
-            Court of Protection deputy
-          </li>
-        </ul>
-      </div>
-      
+      <h2>
+        Your choice
+      </h2>
+      <p>
+        You can stop your confidential patient information being used for research and planning. <a href="">Find out how to make your choice.</a>
+      </p>
+      <p>
+        If you're happy with your confidential patient information being used for research and planning you do not need to do anything.
+      </p>
+      <p>
+        Any choice you make will not impact your individual care.
+      </p>
 
     <!-- Navigation -->
     <nav class="nhsuk-pagination" role="navigation" aria-label="Pagination">
       <ul class="nhsuk-list nhsuk-pagination__list">
-        <li class="nhsuk-pagination-item--previous">
-          <a class="nhsuk-pagination__link nhsuk-pagination__link--prev" href="/type-1-content/make-your-choice">
-            <span class="nhsuk-pagination__title">Previous</span>
+
+        <li class="nhsuk-pagination-item--next">
+          <a class="nhsuk-pagination__link nhsuk-pagination__link--next" href="/version-a/type-1-content/how-confidential-patient">
+            <span class="nhsuk-pagination__title">Next</span>
             <span class="nhsuk-u-visually-hidden">:</span>
-            <span class="nhsuk-pagination__page">Make your choice</span>
-            <svg class="nhsuk-icon nhsuk-icon__arrow-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="34" height="34">
-              <path d="M4.1 12.3l2.7 3c.2.2.5.2.7 0 .1-.1.1-.2.1-.3v-2h11c.6 0 1-.4 1-1s-.4-1-1-1h-11V9c0-.2-.1-.4-.3-.5h-.2c-.1 0-.3.1-.4.2l-2.7 3c0 .2 0 .4.1.6z"></path>
+            <span class="nhsuk-pagination__page">How confidential patient information is used</span>
+            <svg class="nhsuk-icon nhsuk-icon__arrow-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="34" height="34">
+              <path d="M19.6 11.66l-2.73-3A.51.51 0 0 0 16 9v2H5a1 1 0 0 0 0 2h11v2a.5.5 0 0 0 .32.46.39.39 0 0 0 .18 0 .52.52 0 0 0 .37-.16l2.73-3a.5.5 0 0 0 0-.64z"></path>
             </svg>
           </a>
         </li>
