--- a/src/prototype/app/views/version-a/type-1-content/other-ways-to-manage-your-choice.html
+++ b/src/prototype/app/views/version-a/type-1-content/other-ways-to-manage-your-choice.html
@@ -137,6 +137,7 @@
     <ol class="nhsuk-breadcrumb__list">
       <li class="nhsuk-breadcrumb__item"><a href="https://www.nhs.uk/" class="nhsuk-breadcrumb__link">Home</a></li>
       <li class="nhsuk-breadcrumb__item"><a href="overview" class="nhsuk-breadcrumb__link">Choose if your GP medical records is shared for research and planning</a></li>
+      <li class="nhsuk-breadcrumb__item"><a href="make-your-choice" class="nhsuk-breadcrumb__link">Make your choice</a></li>
     </ol>
     <p class="nhsuk-breadcrumb__back">
       <a href="" class="nhsuk-breadcrumb__backlink">Back to Health A to Z</a>
@@ -153,120 +154,82 @@
   <div class="nhsuk-grid-column-two-thirds">
 
     <div class="nhsuk-u-reading-width">
-      <h1>Make your choice</h1>
+      <h1>Other ways to make a choice about sharing your GP data</h1>
       <p class="nhsuk-lede-text">
-        Choose if your personally identifiable patient data can be shared outside your GP practice for purposes except your own care to support health and care planning and research.
+        Find other ways to choose if your personally identifiable patient data can be shared outside your GP practice for purposes except your own care to support health and care planning and research.
       </p>
     </div>
 
-    <nav class="nhsuk-contents-list" role="navigation" aria-label="Pages in this guide">
-      <h2 class="nhsuk-u-visually-hidden">Contents</h2>
-      <ol class="nhsuk-contents-list__list">
-        <li class="nhsuk-contents-list__item" aria-current="page">
-          <a class="nhsuk-contents-list__link" href="/type-1-content/overview">Overview</a>
-        </li>
-        <li class="nhsuk-contents-list__item">
-          <a class="nhsuk-contents-list__link" href="/type-1-content/how-confidential-patient">How confidential patient information is used</a>
-        </li>
-        <li class="nhsuk-contents-list__item">
-          <a class="nhsuk-contents-list__link" href="/type-1-content/when-your-choice-does-not-apply">When your choice does not apply</a>
-        </li>
-        <li class="nhsuk-contents-list__item">
-          <span class="nhsuk-contents-list__current">Make your choice</span>
-        </li>
-      </ol>
-    </nav>
-
     <p>
-      Be sure you use this service to:
+      You can make or change a choice for:
     </p>
     <ul class="nhsuk-list nhsuk-list--bullet">
-      <li>choose if your personally identifiable patient data can be shared outside your GP practice for research and planning</li>
-      <li>change or check your current choice</li>
+      <li>yourself</li>
+      <li>children under the age of 13</li>
+      <li>someone you can legally make decisions for</li>
     </ul>
+      <p>
+        Download and complete this form and email or post it to your GP practice. 
+      </p>
+      <div class="nhsuk-grid-row">
+        <div class="nhsuk-grid-column-one-quarter nhsuk-u-one-querter-tablet">
+          <a class="app-download__link" href="https://assets.nhs.uk/nhsuk-cms/documents/Type1Opt-outform.docx">
+            <img class="app-download__thumbnail" height="150" alt="" src="https://assets.nhs.uk/nhsuk-cms/images/nhs-1.height-300.png">
+          </a>
+        </div>
+        <div class="nhsuk-grid-column-three-quesrters nhsuk-u-two-thirds-tablet">
+          <ul class="nhsuk-list">
+            <li><a href="https://assets.nhs.uk/nhsuk-cms/documents/Type1Opt-outform.docx">Type 1 Opt-out form.docx (32kB)</a></li>
+            <li>Published: 19 May 2021</li>
+            <li>Last updated: 19 May 2021</li>
+          </ul>
+        </div>
+      </div>
 
-    <p>
-      Your choice will be applied by:
-    </p>
-    <ul class="nhsuk-list nhsuk-list--bullet">
-      <li>NHS Digital</li>
-      <li>all other health and care organisations by 31 July 2022 (delayed from March 2020 to allow organisations to focus on the COVID-19 outbreak). <a href="">Read more about the extension to the compliance deadline for national data opt-out.</a></li>
-    </ul>
-    <p>
-      Any choice you make will not impact your individual care.
-    </p>
+      <p>
+        If you are filling in this form on behalf of a dependent e.g. a child, the GP practice will first check that you have the authority to do so.
+      </p>
 
-    <div class="nhsuk-do-dont-list">
-  <h3 class="nhsuk-do-dont-list__label">Before you start</h3>
-  <p>
-    You must:
-  </p>
-  <ul class="nhsuk-list nhsuk-list--tick">
-    <li>
-      <svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" width="34" height="34">
-        <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12" stroke="#007f3b"></path>
-      </svg>
-      be aged 13 or older
-    </li>
-    <li>
-      <svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" width="34" height="34">
-        <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12" stroke="#007f3b"></path>
-      </svg>
-      have access to your email or mobile phone
-    </li>
-    <li>
-      <svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" width="34" height="34">
-        <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12" stroke="#007f3b"></path>
-      </svg>
-      have your NHS number or your postcode registered with your GP surgery
-    </li>
-  </ul>
-  <details class="nhsuk-details">
-    <summary class="nhsuk-details__summary">
-      <span class="nhsuk-details__summary-text">
-        Where can I find my NHS number?
-      </span>
-    </summary>
-    <div class="nhsuk-details__text">
-      <p>An NHS number is a 10 digit number, like 485 777 3456.</p>
-      <p>You can find your NHS number by logging in to a GP online service or on any document the NHS has sent you, such as your:</p>
-      <ul>
-        <li>prescriptions</li>
-        <li>test results</li>
-        <li>hospital referral letters</li>
-        <li>appointment letters</li>
-      </ul>
-      <p>Ask your GP surgery for help if you can't find your NHS number.</p>
-  
-    </div>
-  </details>
-</div>
+      <p>
+        <a href="#">NHS Digital's privacy notice</a> explains how your data is used to apply your choice.
+      </p>
 
-      <a class="nhsuk-button" href="/check-ID" class="button">Start now</a>
-
-      <div class="nhsuk-inset-text">
-        <span class="nhsuk-u-visually-hidden">Other ways to make a choice</span>
-        <h2>
-          Other ways to make a choice
-        </h2>
+      <div class="nhsuk-do-dont-list">
+        <h3 class="nhsuk-do-dont-list__label">Make or change a choice for an adult</h3>
         <p>
-          <a href="/type-1-content/other-ways-to-manage-your-choice">Visit this page</a> in the case you want to make or change a choice for:
+          To make and manage a choice on behalf of someone else, you must be one of the following to the person:
         </p>
-        <ul>
-          <li>yourself by phone, email or post</li>
-          <li>children under the age of 13</li>
-          <li>someone you can legally make decisions for</li>
+        <ul class="nhsuk-list nhsuk-list--tick">
+          <li>
+            <svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" width="34" height="34">
+              <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12" stroke="#007f3b"></path>
+            </svg>
+            health and welfare lasting power of attorney
+          </li>
+          <li>
+            <svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" width="34" height="34">
+              <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12" stroke="#007f3b"></path>
+            </svg>
+            property and financial affairs lasting power of attorney
+          </li>
+          <li>
+            <svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" width="34" height="34">
+              <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12" stroke="#007f3b"></path>
+            </svg>
+            Court of Protection deputy
+          </li>
         </ul>
       </div>
+      
 
     <!-- Navigation -->
     <nav class="nhsuk-pagination" role="navigation" aria-label="Pagination">
       <ul class="nhsuk-list nhsuk-pagination__list">
         <li class="nhsuk-pagination-item--previous">
-          <a class="nhsuk-pagination__link nhsuk-pagination__link--prev" href="/type-1-content/when-your-choice-does-not-apply">
+          <a class="nhsuk-pagination__link nhsuk-pagination__link--prev" href="/version-a/type-1-content/make-your-choice">
             <span class="nhsuk-pagination__title">Previous</span>
             <span class="nhsuk-u-visually-hidden">:</span>
-            <span class="nhsuk-pagination__page">When your choice does not apply</span>
+            <span class="nhsuk-pagination__page">Make your choice</span>
             <svg class="nhsuk-icon nhsuk-icon__arrow-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="34" height="34">
               <path d="M4.1 12.3l2.7 3c.2.2.5.2.7 0 .1-.1.1-.2.1-.3v-2h11c.6 0 1-.4 1-1s-.4-1-1-1h-11V9c0-.2-.1-.4-.3-.5h-.2c-.1 0-.3.1-.4.2l-2.7 3c0 .2 0 .4.1.6z"></path>
             </svg>
