--- a/src/prototype/app/views/version-a/wizard/passing-data-question-conditions.html
+++ b/src/prototype/app/views/version-a/wizard/passing-data-question-conditions.html
@@ -5,28 +5,29 @@
 {% endblock %}
 
 {% block beforeContent %}
-  {{ breadcrumb({
-    items: [
-      {
-        href: "/docs",
-        text: "Home"
-      }
-    ],
-    href: "/docs/how-tos",
-    text: "How to guides"
-  }) }}
+<!-- Breadcrumbs -->
+<nav class="nhsuk-breadcrumb" aria-label="Breadcrumb">
+  <div class="nhsuk-width-container">
+    <ol class="nhsuk-breadcrumb__list">
+      <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link">Choose if your GP medical records is shared for research and planning</a></li>
+    </ol>
+    <p class="nhsuk-breadcrumb__back">
+      <a href="" class="nhsuk-breadcrumb__backlink">Back to Health A to Z</a>
+    </p>
+  </div>
+</nav>
 {% endblock %}
 
 {% block content %}
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="/examples/passing-data/passing-data-check-answers" method="post" class="form">
+      <form action="/version-a/wizard/passing-data-check-answers" method="post" class="form">
         <div class="nhsuk-form-group">
           <fieldset class="nhsuk-fieldset" aria-describedby="conditions-hint">
             <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
               <h1 class="nhsuk-fieldset__heading">
-                How would you prefer to receive your confirmation?
+                Have you ever had any of these conditions?
               </h1>
             </legend>
             <div class="nhsuk-hint" id="conditions-hint">
@@ -34,29 +35,36 @@
             </div>
             <div class="nhsuk-checkboxes">
               <div class="nhsuk-checkboxes__item">
-                <input class="nhsuk-checkboxes__input" id="conditions-1" name="condition" type="checkbox" value="By phone"{{ checked("condition", "Asthma") }}>
+                <input class="nhsuk-checkboxes__input" id="conditions-1" name="condition" type="checkbox" value="Asthma"{{ checked("condition", "Asthma") }}>
                 <label class="nhsuk-label nhsuk-checkboxes__label" for="conditions-1">
-                  By phone
+                  Asthma
                 </label>
               </div>
               <div class="nhsuk-checkboxes__item">
-                <input class="nhsuk-checkboxes__input" id="conditions-6" name="condition" type="checkbox" value="By email"{{ checked("condition", "Epilepsy") }}>
+                <input class="nhsuk-checkboxes__input" id="conditions-6" name="condition" type="checkbox" value="Epilepsy"{{ checked("condition", "Epilepsy") }}>
                 <label class="nhsuk-label nhsuk-checkboxes__label" for="conditions-6">
-                  By email
+                  Epilepsy
                 </label>
               </div>
               <div class="nhsuk-checkboxes__item">
-                <input class="nhsuk-checkboxes__input" id="conditions-7" name="condition" type="checkbox" value="By post"{{ checked("condition", "Heart Disease") }}>
+                <input class="nhsuk-checkboxes__input" id="conditions-7" name="condition" type="checkbox" value="Heart Disease"{{ checked("condition", "Heart Disease") }}>
                 <label class="nhsuk-label nhsuk-checkboxes__label" for="conditions-7">
-                  By post
+                  Heart Disease
                 </label>
+              </div>
+              <div class="nhsuk-checkboxes__item">
+                <input class="nhsuk-checkboxes__input" id="conditions-8" name="condition" type="checkbox" value="High blood pressure"{{ checked("condition", "High blood pressure") }}>
+                <label class="nhsuk-label nhsuk-checkboxes__label" for="conditions-8">
+                  High blood pressure
+                </label>
+              </div>
             </div>
           </fieldset>
         </div>
         <button class="nhsuk-button">Continue</button>
       </form>
       <div class="nhsuk-back-link">
-        <a href="/examples/passing-data/passing-data-question-contact" class="nhsuk-back-link__link">
+        <a href="/version-a/wizard/passing-data-question-contact" class="nhsuk-back-link__link">
         <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="34" width="34">
           <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
         </svg>
@@ -75,7 +83,7 @@
         "label": "Home"
       },
       {
-        "URL": "/examples/passing-data/clear-data",
+        "URL": "/version-a/wizard/clear-data",
         "label": "Clear data"
       },
       {
