--- a/src/prototype/app/views/version-b/check-ID.html
+++ b/src/prototype/app/views/version-b/check-ID.html
@@ -50,10 +50,10 @@
                 We'll use these details to find your contact details from your health records so we can send you a security code.
               </p>
 
-              <a class="nhsuk-button" href="/examples/passing-data/passing-data-question-name" class="button">Continue</a>
+              <a class="nhsuk-button" href="/version-b/wizard/passing-data-question-name" class="button">Continue</a>
 
               <p>
-                <a id="privacyNoticeLink" target="_blank" rel="noopener noreferrer" href="/privacynotice"><!-- react-text: 44 -->How your data will be processed using this service<!-- /react-text --><span class="util-visuallyhidden"> - Page opens in new window</span></a>
+                <a id="privacyNoticeLink" target="_blank" rel="noopener noreferrer" href="#"><!-- react-text: 44 -->How your data will be processed using this service<!-- /react-text --><span class="util-visuallyhidden"> - Page opens in new window</span></a>
               </p>
             </div>
           </div>
