--- a/src/prototype/app/views/version-b/type-1-content/when-your-choice-does-not-apply.html
+++ b/src/prototype/app/views/version-b/type-1-content/when-your-choice-does-not-apply.html
@@ -153,7 +153,7 @@
   <div class="nhsuk-grid-column-two-thirds">
 
     <div class="nhsuk-u-reading-width">
-      <h1>How confidential patient information is used</h1>
+      <h1>When your choice does not apply</h1>
       <p class="nhsuk-lede-text">
         Choose if your personally identifiable patient data can be shared outside your GP practice for purposes except your own care to support health and care planning and research.
       </p>
@@ -163,96 +163,77 @@
       <h2 class="nhsuk-u-visually-hidden">Contents</h2>
       <ol class="nhsuk-contents-list__list">
         <li class="nhsuk-contents-list__item" aria-current="page">
-          <a class="nhsuk-contents-list__link" href="/type-1-content/overview">Overview</a>
+          <a class="nhsuk-contents-list__link" href="/version-b/type-1-content/overview">Overview</a>
         </li>
         <li class="nhsuk-contents-list__item">
-          <span class="nhsuk-contents-list__current">How confidential patient information is used</span>
+          <a class="nhsuk-contents-list__link" href="/version-b/type-1-content/how-confidential-patient">How confidential patient information is used</a>
         </li>
         <li class="nhsuk-contents-list__item">
-          <a class="nhsuk-contents-list__link" href="/type-1-content/when-your-choice-does-not-apply">When your choice does not apply</a>
+          <span class="nhsuk-contents-list__current">When your choice does not apply</span>
         </li>
         <li class="nhsuk-contents-list__item">
-          <a class="nhsuk-contents-list__link" href="/type-1-content/make-your-choice">Make your choice</a>
+          <a class="nhsuk-contents-list__link" href="/version-b/type-1-content/make-your-choice">Make your choice</a>
         </li>
       </ol>
     </nav>
 
     <p>
-      The NHS collects confidential patient information from:
+      If you choose to stop your confidential patient information being used for research and planning, your data might still be used in some situations.
     </p>
-    <ul class="nhsuk-list nhsuk-list--bullet">
-      <li>all NHS organisations, trusts and local authorities (including GP surgeries)</li>
-      <li>private organisations, such as private hospitals providing NHS funded care</li>
-    </ul>
-    <p>
-      Research bodies and organisations can request access to this information. This includes:
-    </p>
-    <ul class="nhsuk-list nhsuk-list--bullet">
-      <li>university researchers</li>
-      <li>hospital researchers</li>
-      <li>medical royal colleges</li>
-      <li>pharmaceutical companies researching new treatments</li>
-    </ul>
-    <div class="nhsuk-inset-text">
-      <span class="nhsuk-u-visually-hidden">Find out how GP data is used for planning and research</span>
-      <p>
-        Find out how GP data is used for planning and research on the NHS Digital website.
-      </p>
-    </div>
-
       <h2>
-        Who cannot use confidential patient information
+        When required by law
       </h2>
       <p>
-        Access to confidential patient information will not be given for:
-      </p>
-      <ul class="nhsuk-list nhsuk-list--bullet">
-        <li>marketing purposes</li>
-        <li>insurance purposes</li>
-      </ul>
-      <p>
-        (unless you request this)
+        If there's a legal requirement to provide it, such as a court order.
       </p>
 
       <h2>
-        How confidential patient information is protected
+        When you have given consent
       </h2>
       <p>
-        Your confidential patient information is looked after in accordance with good practice and the law.
-      </p>
-      <p>
-        Every organisation that provides health and care services will take every step to:
-      </p>
-      <ul class="nhsuk-list nhsuk-list--bullet">
-        <li>keep data secure</li>
-        <li>use data that cannot identify you whenever possible</li>
-        <li>use data to benefit health and care</li>
-        <li>not use data for marketing or insurance purposes (unless you request this)</li>
-        <li>make it clear why and how data is being used</li>
-      </ul>
-      <p>
-        All NHS organisations must provide information on the type of data they collect and how it’s used. Data release registers are published by NHS Digital and the Department of Health and Social Care, showing records of the data they have shared with other organisations.
+        If you have given your consent, such as for a medical research study.
       </p>
 
+      <h2>
+        When there is an overriding public interest
+      </h2>
+      <p>
+        In an emergency or in a situation when the safety of others is most important. For example, to help manage contagious diseases like coronavirus and stop them spreading.
+      </p>
+
+      <h2>
+        When information that can identify you is removed
+      </h2>
+      <p>
+        Information about your health care or treatment might still be used in research and planning if the information that can identify you is removed first.
+      </p>
+
+      <h2>
+        When there is a specific exclusion
+      </h2>
+      <p>
+        Your confidential patient information can still be used in a small number of situations. For example, for official national statistics like a population census.
+      </p>
+      <p><a href="">Read more about when your choice does not apply (page opens in new window).</a></p>
 
     <!-- Navigation -->
     <nav class="nhsuk-pagination" role="navigation" aria-label="Pagination">
       <ul class="nhsuk-list nhsuk-pagination__list">
         <li class="nhsuk-pagination-item--previous">
-          <a class="nhsuk-pagination__link nhsuk-pagination__link--prev" href="/type-1-content/overview">
+          <a class="nhsuk-pagination__link nhsuk-pagination__link--prev" href="/version-b/type-1-content/how-confidential-patient">
             <span class="nhsuk-pagination__title">Previous</span>
             <span class="nhsuk-u-visually-hidden">:</span>
-            <span class="nhsuk-pagination__page">Overview</span>
+            <span class="nhsuk-pagination__page">How confidential patient information is used</span>
             <svg class="nhsuk-icon nhsuk-icon__arrow-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="34" height="34">
               <path d="M4.1 12.3l2.7 3c.2.2.5.2.7 0 .1-.1.1-.2.1-.3v-2h11c.6 0 1-.4 1-1s-.4-1-1-1h-11V9c0-.2-.1-.4-.3-.5h-.2c-.1 0-.3.1-.4.2l-2.7 3c0 .2 0 .4.1.6z"></path>
             </svg>
           </a>
         </li>
         <li class="nhsuk-pagination-item--next">
-          <a class="nhsuk-pagination__link nhsuk-pagination__link--next" href="/type-1-content/when-your-choice-does-not-apply">
+          <a class="nhsuk-pagination__link nhsuk-pagination__link--next" href="/version-b/type-1-content/make-your-choice">
             <span class="nhsuk-pagination__title">Next</span>
             <span class="nhsuk-u-visually-hidden">:</span>
-            <span class="nhsuk-pagination__page">When your choice does not apply</span>
+            <span class="nhsuk-pagination__page">Make your choice</span>
             <svg class="nhsuk-icon nhsuk-icon__arrow-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="34" height="34">
               <path d="M19.6 11.66l-2.73-3A.51.51 0 0 0 16 9v2H5a1 1 0 0 0 0 2h11v2a.5.5 0 0 0 .32.46.39.39 0 0 0 .18 0 .52.52 0 0 0 .37-.16l2.73-3a.5.5 0 0 0 0-.64z"></path>
             </svg>
