--- a/src/prototype/app/views/version-a/branching/answer-no.html
+++ b/src/prototype/app/views/version-a/branching/answer-no.html
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <a class="nhsuk-button" href="/request-confirmed-no" class="button">Confirm</a>
+    <a class="nhsuk-button" href="/version-a/request-confirmed-no" class="button">Confirm</a>
 
   </div>
 
