--- a/src/prototype/app/views/version-b/branching/answer-yes.html
+++ b/src/prototype/app/views/version-b/branching/answer-yes.html
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <a class="nhsuk-button" href="/request-confirmed-yes" class="button">Confirm</a>
+    <a class="nhsuk-button" href="/version-b/request-confirmed-yes" class="button">Confirm</a>
   </div>
 
 </div>
