--- a/src/prototype/app/views/pconfig/landing-page-config.html
+++ b/src/prototype/app/views/pconfig/landing-page-config.html
@@ -13,7 +13,7 @@
     },
     {
       text: "Apps",
-      href: "/landing-page-app"
+      href: "/landing-page-apps"
     }
   ],
   text: "Configuration",
@@ -36,13 +36,14 @@
             text: "Apps"
           },
           {
-            href: "/pconfig/step-search",
-            text: "Steps"
+            href: "/pconfig/wizard-search",
+            text: "Wizards"
           },
           {
             href: "/pconfig/page-search",
             text: "Pages"
           },
+
           {
             href: "/pconfig/action-search",
             text: "Actions"
@@ -54,6 +55,10 @@
           {
             href: "/pconfig/message-search",
             text: "Strings"
+          },
+          {
+            href: "/pconfig/landing-page-dashboard",
+            text: "Dashboard"
           },
           {
             href: "/pconfig/landing-page-test-data",
