--- a/src/prototype/app/views/pconfig/wizard-search.html
+++ b/src/prototype/app/views/pconfig/wizard-search.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-  Apps
+  Wizards
 {% endblock %}
 
 {% block beforeContent %}
@@ -13,7 +13,7 @@
     },
     {
       text: "Apps",
-      href: "/landing-page-app"
+      href: "/landing-page-apps"
     },
     {
       text: "Configuration",
@@ -29,7 +29,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
       <h1>
-        Apps
+        Wizards
       </h1>
       <p>Enter any information you have and click Search. To list all values, leave fields blank.</p>
 
@@ -42,16 +42,22 @@
             <label class="nhsuk-label" for="nhs-number">
               App ID
             </label>
-            <input class="nhsuk-input nhsuk-u-width-three-quarters" id="nhs-number" name="nhs-number" value="{{ data['nhs-number'] }}" type="text">
+            <input class="nhsuk-input nhsuk-u-width-one-quarter" id="nhs-number" name="nhs-number" value="" type="text">
           </div>
           <div class="nhsuk-form-group">
             <label class="nhsuk-label" for="first-name">
-              Title
+              Wizard ID
             </label>
-            <input class="nhsuk-input nhsuk-u-width-three-quarters" id="first-name" name="first-name" value="{{ data['first-name'] }}" type="text">
+            <input class="nhsuk-input nhsuk-u-width-one-quarter" id="first-name" name="first-name" value="" type="text">
+          </div>
+          <div class="nhsuk-form-group">
+            <label class="nhsuk-label" for="first-name">
+              Description
+            </label>
+            <input class="nhsuk-input nhsuk-u-width-three-quarters" id="first-name" name="first-name" value="" type="text">
           </div>
         </fieldset>
-        <button class="nhsuk-button" href="/pconfig/app-edit">Search</button>
+        <button class="nhsuk-button" href="/pconfig/wizard-edit">Search</button>
         <button class="nhsuk-button">Clear</button>
         <button class="nhsuk-button">Add New</button>
       </form>
@@ -66,7 +72,10 @@
             text: "App ID"
           },
           {
-            text: "Title"
+            text: "Wizard ID"
+          },
+          {
+            text: "Description"
           }
         ],
         rows: [
@@ -76,38 +85,26 @@
               text: "001"
             },
             {
-              header: "Title",
-              text: "Type 1 opt-out"
+              header: "Wizard ID",
+              text: "T1MAIN"
+            },
+            {
+              header: "Description",
+              text: "Type 1 Opt-Out"
             }
           ],
           [
             {
               header: "App ID",
-              text: "002"
+              text: "001"
             },
             {
-              header: "Title",
-              text: "National Data opt-out"
-            }
-          ],
-          [
-            {
-              header: "App ID",
-              text: "003"
+              header: "Wizard ID",
+              text: "T1SURV"
             },
             {
-              header: "Title",
-              text: "Organ donation Opt-out"
-            }
-          ],
-          [
-            {
-              header: "App ID",
-              text: "004"
-            },
-            {
-              header: "Title",
-              text: "COVID-19 Vaccine Communication Opt Out"
+              header: "Description",
+              text: "Follow-up survey"
             }
           ]
         ]
