Re-arranged prototype landing page

--- a/src/prototype/app/views/landing-page-apps.html
+++ b/src/prototype/app/views/landing-page-apps.html
@@ -28,12 +28,8 @@
       {{ contentsList({
         items: [
           {
-            href: "/landing-page-prototype-a",
-            text: "Prototype A (control)"
-          },
-          {
-            href: "/landing-page-prototype-b",
-            text: "Prototype B"
+            href: "/landing-page-prototype",
+            text: "Prototype"
           },
           {
             href: "/frontend/index.html",
