--- a/src/prototype/app/views/landing-page-prototype.html
+++ b/src/prototype/app/views/landing-page-prototype.html
@@ -44,7 +44,7 @@
 
       <!-- Change the page title here -->
       <h1>
-        Type 1 Opt-Out Version A
+        Type 1 Opt-out
       </h1>
 
       <!-- Add your content here -->
@@ -67,7 +67,7 @@
               <div class="nhsuk-card__content beta-card__content">
                 <h2 class="nhsuk-card__heading nhsuk-heading-m">
                   <a class="nhsuk-card__link" href="/version-a/nhsuk-opt-out-of-sharing">
-                    Opt out of sharing your health records
+                    Version A (Control)
                   </a>
                 </h2>
                 <div class="nhsuk-card__description"><p>You can change or check your cuttent choice in regards to whether or not your personally identifiable patient data can be shared outside your GP practice for research and planning</p></div>
@@ -83,8 +83,8 @@
             <div class="nhsuk-card nhsuk-card--clickable ">
               <div class="nhsuk-card__content beta-card__content">
                 <h2 class="nhsuk-card__heading nhsuk-heading-m">
-                  <a class="nhsuk-card__link" href="/version-a/type1-question-status">
-                    Opt out of sharing your health records - OPT 2
+                  <a class="nhsuk-card__link" href="/version-b/type1-question-status">
+                    Version B
                   </a>
                 </h2>
                 <div class="nhsuk-card__description"><p>Click here to test a different option of the Type 1 Opt-out online service</p></div>
