--- a/src/prototype/app/views/pconfig/app-edit.html
+++ b/src/prototype/app/views/pconfig/app-edit.html
@@ -136,10 +136,10 @@
         }) }}
         </br>
 
-        <button class="nhsuk-button">Save</button>
-        <button class="nhsuk-button">Return to Search</button>
-        <button class="nhsuk-button">Previous</button>
-        <button class="nhsuk-button">Next</button>
+        <a class="nhsuk-button">Save</a>
+        <a class="nhsuk-button" href="/pconfig/app-search">Return to Search</a>
+        <a class="nhsuk-button">Previous</a>
+        <a class="nhsuk-button">Next</a>
       </form>
 
     </div>
