--- a/src/prototype/app/views/pconfig/app-search.html
+++ b/src/prototype/app/views/pconfig/app-search.html
@@ -33,7 +33,7 @@
       </h1>
       <p>Enter any information you have and click Search. To list all values, leave fields blank.</p>
 
-      <form action="/examples/passing-data/passing-data-question-dob" method="post" autocomplete="off">
+      <form action="/pconfig/app-edit" method="post" autocomplete="off">
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
 
@@ -42,18 +42,18 @@
             <label class="nhsuk-label" for="nhs-number">
               App ID
             </label>
-            <input class="nhsuk-input nhsuk-u-width-three-quarters" id="nhs-number" name="nhs-number" value="{{ data['nhs-number'] }}" type="text">
+            <input class="nhsuk-input nhsuk-u-width-one-quarter" id="nhs-number" name="nhs-number" value="{{ data['nhs-number'] }}" type="text">
           </div>
           <div class="nhsuk-form-group">
             <label class="nhsuk-label" for="first-name">
-              Title
+              Description
             </label>
             <input class="nhsuk-input nhsuk-u-width-three-quarters" id="first-name" name="first-name" value="{{ data['first-name'] }}" type="text">
           </div>
         </fieldset>
         <button class="nhsuk-button" href="/pconfig/app-edit">Search</button>
-        <button class="nhsuk-button">Clear</button>
-        <button class="nhsuk-button">Add New</button>
+        <a class="nhsuk-button">Clear</a>
+        <a class="nhsuk-button">Add New</a>
       </form>
 
       {{ table({
@@ -66,7 +66,7 @@
             text: "App ID"
           },
           {
-            text: "Title"
+            text: "Description"
           }
         ],
         rows: [
@@ -76,7 +76,7 @@
               text: "001"
             },
             {
-              header: "Title",
+              header: "Description",
               text: "Type 1 opt-out"
             }
           ],
@@ -86,7 +86,7 @@
               text: "002"
             },
             {
-              header: "Title",
+              header: "Description",
               text: "National Data opt-out"
             }
           ],
@@ -96,7 +96,7 @@
               text: "003"
             },
             {
-              header: "Title",
+              header: "Description",
               text: "Organ donation Opt-out"
             }
           ],
@@ -106,7 +106,7 @@
               text: "004"
             },
             {
-              header: "Title",
+              header: "Description",
               text: "COVID-19 Vaccine Communication Opt Out"
             }
           ]
