--- a/src/prototype/app/views/pconfig/patient-search.html
+++ b/src/prototype/app/views/pconfig/patient-search.html
@@ -8,19 +8,23 @@
   {{ breadcrumb({
     items: [
     {
-      text: "Home",
+      text: "Environments",
       href: "/"
     },
     {
+      text: "Apps",
+      href: "/landing-page-apps"
+    },
+    {
       text: "Configuration",
-      href: "/config/landing-page-config"
+      href: "/pconfig/landing-page-config"
     },
     {
       text: "Test Data",
-      href: "/config/test-data"
+      href: "/pconfig/test-data"
     }
   ],
-  href: "/config/patients",
+  href: "/pconfig/patients",
   text: "Patients"
   }) }}
 {% endblock %}
@@ -33,7 +37,7 @@
       </h1>
       <p>Enter any information you have and click Search. To list all values, leave fields blank.</p>
 
-      <form action="/examples/passing-data/passing-data-question-dob" method="post" autocomplete="off">
+      <form action="/pconfig/patient-edit" method="post" autocomplete="off">
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
 
@@ -42,7 +46,7 @@
             <label class="nhsuk-label" for="nhs-number">
               NHS number
             </label>
-            <input class="nhsuk-input nhsuk-u-width-three-quarters" id="nhs-number" name="nhs-number" value="{{ data['nhs-number'] }}" type="text">
+            <input class="nhsuk-input nhsuk-u-width-half" id="nhs-number" name="nhs-number" value="{{ data['nhs-number'] }}" type="text">
           </div>
           <div class="nhsuk-form-group">
             <label class="nhsuk-label" for="first-name">
@@ -57,9 +61,9 @@
             <input class="nhsuk-input nhsuk-u-width-three-quarters" id="last-name" name="last-name" value="{{ data['last-name'] }}" type="text">
           </div>
         </fieldset>
-        <button class="nhsuk-button" href="/config/patient-edit">Search</button>
-        <button class="nhsuk-button">Clear</button>
-        <button class="nhsuk-button">Add New</button>
+        <button class="nhsuk-button" href="/pconfig/patient-edit">Search</button>
+        <a class="nhsuk-button">Clear</a>
+        <a class="nhsuk-button">Add New</a>
       </form>
 
       {{ table({
