adding breadcrumbs and patients components

--- a/src/prototype/app/views/index.html
+++ b/src/prototype/app/views/index.html
@@ -38,7 +38,7 @@
             text: "Production"
           },
           {
-            href: "/config/index.html",
+            href: "/config/",
             text: "Configuration"
           }
         ]
